--- a/lib/web/templates/layout/app.html.eex
+++ b/lib/web/templates/layout/app.html.eex
@@ -67,6 +67,17 @@
 
     <main>
       <div class="container">
+        <%= if flash = get_flash(@conn, :info) do %>
+          <div class="alert alert-primary" role="alert">
+            <%= flash %>
+          </div>
+        <% end %>
+        <%= if flash = get_flash(@conn, :error) do %>
+          <div class="alert alert-danger" role="alert">
+            <%= flash %>
+          </div>
+        <% end %>
+
         <%= render @view_module, @view_template, assigns %>
       </div>
     </main>
