--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -173,5 +173,11 @@
         Built with <%= link(ExVenture.version(), to: "http://exventure.org", target: "_blank") %>.
       </footer>
     </div>
+
+    <script type="application/javascript">
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip();
+});
+    </script>
   </body>
 </html>
