--- a/lib/web/templates/admin/quest/show.html.eex
+++ b/lib/web/templates/admin/quest/show.html.eex
@@ -35,15 +35,24 @@
               <td><%= @quest.name %></td>
             </tr>
             <tr>
-              <th>Giver</th>
+              <th>
+                Giver
+                <%= SharedView.help_tooltip("quest.giver") %>
+              </th>
               <td><%= link(@quest.giver.name, to: npc_path(@conn, :show, @quest.giver.id)) %></td>
             </tr>
             <tr>
-              <th>Description</th>
+              <th>
+                Description
+                <%= SharedView.help_tooltip("quest.description") %>
+              </th>
               <td><%= @quest.description %></td>
             </tr>
             <tr>
-              <th>Completed Message</th>
+              <th>
+                Completed Message
+                <%= SharedView.help_tooltip("quest.giver") %>
+              </th>
               <td><%= @quest.completed_message %></td>
             </tr>
           </table>
@@ -90,6 +99,7 @@
       <div class="box">
         <div class="box-header">
           <h3 class="box-title">Steps</h3>
+          <%= SharedView.help_tooltip("quest.steps") %>
           <div class="box-tools">
             <%= link("New Step", to: quest_step_path(@conn, :new, @quest.id), class: "btn btn-primary") %>
           </div>
