--- a/lib/web/templates/admin/npc_spawner/_form.html.eex
+++ b/lib/web/templates/admin/npc_spawner/_form.html.eex
@@ -23,13 +23,14 @@
         <%= label f, :name %>
         <%= text_input f, :name, class: "form-control", rows: 10 %>
         <%= error_tag f, :name %>
-        <span class="help-block">If empty the base NPC will be used, fill this in to create similar NPCs with different names to customize</span>
+        <span class="help-block"><%= Help.get("npc.spawner_name") %></span>
       </div>
 
       <div class="form-group">
         <%= label f, :spawn_interval %>
         <%= number_input f, :spawn_interval, class: "form-control", rows: 10 %>
         <%= error_tag f, :spawn_interval %>
+        <span class="help-block"><%= Help.get("npc.spawner_interval") %></span>
       </div>
     </div>
 
