--- a/lib/web/templates/admin/room_feature/_form.html.eex
+++ b/lib/web/templates/admin/room_feature/_form.html.eex
@@ -5,12 +5,12 @@
 
   <%= form_tag @path, method: form_method(@feature) do %>
     <div class="box-body">
-      <p class="lead"><%= Help.get("room.feature") %></p>
+      <div class="lead"><%= Help.get("room.feature") %></div>
 
       <div class="form-group">
         <%= label :feature, :key %>
         <%= text_input :feature, :key, value: Map.get(@feature, :key, ""), class: "form-control" %>
-        <span class="help-block">This will be used as the lookup key for the <code>look</code> command</span
+        <span class="help-block">This will be used as the lookup key for the <code>look</code> command</span>
       </div>
 
       <div class="form-group">
