--- a/lib/web/templates/admin/zone/_form.html.eex
+++ b/lib/web/templates/admin/zone/_form.html.eex
@@ -9,6 +9,7 @@
         <%= label f, :name %>
         <%= text_input f, :name, class: "form-control" %>
         <%= error_tag f, :name %>
+        <span class="help-block"><%= Help.get("zone.name") %></span>
       </div>
 
       <div class="form-group">
@@ -21,6 +22,7 @@
         <%= label f, :graveyard_id %>
         <%= select f, :graveyard_id, Zone.graveyards(), class: "form-control" %>
         <%= error_tag f, :graveyard_id %>
+        <span class="help-block"><%= Help.get("zone.graveyard") %></span>
       </div>
 
       <div class="form-group">
