--- a/lib/web/templates/admin/skill/_form.html.eex
+++ b/lib/web/templates/admin/skill/_form.html.eex
@@ -67,6 +67,13 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :white_list_effects %>
+        <%= multiple_select f, :white_list_effects, Effect.types(), multiple: true, class: "form-control", size: 5 %>
+        <%= error_tag f, :white_list_effects %>
+        <span class="help-block"><%= Help.get("skill.white_list_effects") %></span>
+      </div>
+
+      <div class="form-group">
         <%= label f, :effects %>
         <%= textarea f, :effects, value: @changeset |> json_field(:effects), class: "form-control", rows: 15 %>
         <%= error_tag f, :effects %>
