--- a/lib/web/templates/admin/npc/_form.html.eex
+++ b/lib/web/templates/admin/npc/_form.html.eex
@@ -27,14 +27,14 @@
         <%= label f, :status_line %>
         <%= text_input f, :status_line, class: "form-control" %>
         <%= error_tag f, :status_line %>
-        <span class="help-block">Make sure to include <code>{name}</code></span>
+        <span class="help-block">Make sure to include <code>[name]</code></span>
       </div>
 
       <div class="form-group">
         <%= label f, :description %>
         <%= textarea f, :description, class: "form-control", rows: 3 %>
         <%= error_tag f, :description %>
-        <span class="help-block">Valid template replacements: <code>status_line</code>, <code>name</code></span>
+        <span class="help-block">Valid template replacements: <code>[status_line]</code>, <code>[name]</code></span>
       </div>
 
       <div class="form-group">
