Display the NPC name in the spawner control page
- Replace generic NPC text in the flow with the (custom) name

--- a/lib/web/templates/admin/npc_spawner/show.html.eex
+++ b/lib/web/templates/admin/npc_spawner/show.html.eex
@@ -26,6 +26,12 @@
           <table class="table">
             <tbody>
               <tr>
+                <th>Name</th>
+                <td>
+                  <%= npc_name(@npc_spawner) %>
+                </td>
+              </tr>
+              <tr>
                 <th>Zone</th>
                 <td><%= link(@npc_spawner.zone.name, to: zone_path(@conn, :show, @npc_spawner.zone_id)) %></td>
               </tr>
@@ -69,6 +75,6 @@
 
 <script type="application/javascript">
 $(function () {
-  new NPCSocket(<%= @npc_spawner.id %>).connect();
+  new NPCSocket(<%= @npc_spawner.id %>, "<%= npc_name(@npc_spawner) %>").connect();
 });
 </script>
