--- a/lib/web/templates/admin/dashboard/index.html.eex
+++ b/lib/web/templates/admin/dashboard/index.html.eex
@@ -93,4 +93,17 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <ul class="list-group">
+        <%= Enum.map(@announcements, fn announcement -> %>
+          <li class="list-group-item">
+            <h4><%= link(announcement.title, to: announcement_path(@conn, :show, announcement)) %></h4>
+            <small><%= TimeView.relative(announcement.inserted_at) %></small>
+          </li>
+        <% end) %>
+      </ul>
+    </div>
+  </div>
 </section>
