Set a name to layers in the zone, quality of life change for admins

--- a/lib/web/templates/admin/room_exit/new.html.eex
+++ b/lib/web/templates/admin/room_exit/new.html.eex
@@ -76,7 +76,7 @@
             <ul class="nav nav-tabs">
               <%= Enum.map(layers(@zone), fn (layer) -> %>
                 <li class="<%= layer_class(@room.map_layer, layer) %>">
-                  <%= link("Layer #{layer}", to: "#layer-#{layer}", data: [toggle: "tab"]) %>
+                  <%= link(ZoneView.layer_name(@zone, layer), to: "#layer-#{layer}", data: [toggle: "tab"]) %>
                 </li>
               <% end)%>
             </ul>
