--- a/lib/web/templates/admin/zone/new.html.eex
+++ b/lib/web/templates/admin/zone/new.html.eex
@@ -17,7 +17,7 @@
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <%= render "_form.html", path: zone_path(@conn, :create), changeset: @changeset, title: "New", submit: "Create" %>
+      <%= render "_form.html", path: zone_path(@conn, :create), edit_name_layers: false, changeset: @changeset, title: "New", submit: "Create" %>
     </div>
   </div>
 </section>
