--- a/lib/web/templates/admin/zone/show.html.eex
+++ b/lib/web/templates/admin/zone/show.html.eex
@@ -75,7 +75,7 @@
             <ul class="nav nav-tabs">
               <%= Enum.map(layers(@zone), fn (layer) -> %>
                 <li class="<%= layer_class(@zone, layer) %>">
-                  <%= link("Layer #{layer}", to: "#layer-#{layer}", data: [toggle: "tab"]) %>
+                  <%= link(layer_name(@zone, layer), to: "#layer-#{layer}", data: [toggle: "tab"]) %>
                 </li>
               <% end)%>
             </ul>
