Use a UUID for loading announcements in the web

--- a/lib/web/templates/admin/announcement/show.html.eex
+++ b/lib/web/templates/admin/announcement/show.html.eex
@@ -30,6 +30,9 @@
         <div class="box-body">
           <%= Earmark.as_html!(@announcement.body) |> raw() %>
         </div>
+        <div class="box-footer">
+          <%= link("View on homepage", to: public_announcement_path(@conn, :show, @announcement.uuid), target: "_blank", class: "btn btn-default") %>
+        </div>
       </div>
     </div>
   </div>
