Add a whitelist of effects to items when using it
Rename white_list_effects to whitelist_effects on skills

--- a/lib/web/templates/admin/item/show.html.eex
+++ b/lib/web/templates/admin/item/show.html.eex
@@ -69,6 +69,19 @@
                 <th>Amount</th>
                 <td><%= @item.amount %></td>
               </tr>
+              <tr>
+                <th>
+                  White Listed Effect Types
+                  <%= SharedView.help_tooltip("item.whitelist_effects") %>
+                </th>
+                <td>
+                  <ul>
+                    <%= Enum.map(@item.whitelist_effects, fn effect -> %>
+                      <li><code><%= effect %></code></li>
+                    <% end) %>
+                  </ul>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
