--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -91,6 +91,13 @@
         <%= error_tag f, :amount %>
         <span class="help-block">Amount of use an item has if usable</span>
       </div>
+
+      <div class="form-group">
+        <%= label f, :whitelist_effects %>
+        <%= multiple_select f, :whitelist_effects, Effect.types(), multiple: true, class: "form-control", size: 5 %>
+        <%= error_tag f, :whitelist_effects %>
+        <span class="help-block"><%= Help.get("item.whitelist_effects") %></span>
+      </div>
     </div>
 
     <div class="box-footer">
