Add `_points` to the health stats
- Make point stats be consistent
- Migrate old health data into the new format when loading saves
- Migrate when defaulting stats
- Class regen fields use `_points`

Old production data _should_ migrate cleanly into this new format,
registrations still work with old starting save data.

--- a/lib/web/templates/admin/class/_form.html.eex
+++ b/lib/web/templates/admin/class/_form.html.eex
@@ -25,9 +25,9 @@
       </div>
 
       <div class="form-group">
-        <%= label f, :regen_health %>
-        <%= text_input f, :regen_health, class: "form-control" %>
-        <%= error_tag f, :regen_health %>
+        <%= label f, :regen_health_points %>
+        <%= text_input f, :regen_health_points, class: "form-control" %>
+        <%= error_tag f, :regen_health_points %>
         <span class="help-block">Number of health each regen tick will give.</span>
       </div>
 
