--- a/lib/web/templates/admin/class/show.html.eex
+++ b/lib/web/templates/admin/class/show.html.eex
@@ -40,7 +40,7 @@
             </tr>
             <tr>
               <th>Regen Health</th>
-              <td><%= @class.regen_health %></td>
+              <td><%= @class.regen_health_points %></td>
             </tr>
             <tr>
               <th>Regen Skill Points</th>
