--- a/lib/web/templates/admin/announcement/index.html.eex
+++ b/lib/web/templates/admin/announcement/index.html.eex
@@ -28,6 +28,8 @@
               <tr>
                 <th>ID</th>
                 <th>Title</th>
+                <td>Is Published?</th>
+                <td>Date</th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -36,6 +38,7 @@
                 <tr>
                   <td><%= announcement.id %></td>
                   <td><%= announcement.title %></td>
+                  <td><code><%= announcement.is_published %></code></td>
                   <td><%= announcement.inserted_at |> TimeView.time() %></td>
                   <td>
                     <%= link("View", to: announcement_path(@conn, :show, announcement.id), class: "btn btn-default btn-xs") %>
