--- a/lib/web/templates/admin/announcement/_form.html.eex
+++ b/lib/web/templates/admin/announcement/_form.html.eex
@@ -13,9 +13,22 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :is_sticky do %>
+          <%= checkbox f, :is_sticky %> Is sticky?
+        <% end %>
+        <%= error_tag f, :is_sticky %>
+      </div>
+
+      <div class="form-group">
         <%= label f, :title %>
         <%= text_input f, :title, class: "form-control" %>
         <%= error_tag f, :title %>
+      </div>
+
+      <div class="form-group">
+        <%= label f, :published_at %>
+        <%= text_input f, :published_at, class: "form-control" %>
+        <%= error_tag f, :published_at %>
       </div>
 
       <div class="form-group">
