Display sticky announcements with a thumbtack icon
Add font awesome 5.0 for the home page

--- a/lib/web/templates/announcement/show.html.eex
+++ b/lib/web/templates/announcement/show.html.eex
@@ -6,6 +6,9 @@
           <%= link(@announcement.title, to: public_announcement_path(@conn, :show, @announcement.uuid)) %>
         </h3>
         <div class="card-subtitle text-muted">
+          <%= if @announcement.is_sticky do %>
+            <i class="fas fa-thumbtack"></i>
+          <% end %>
           <%= TimeView.time(@announcement.inserted_at) %>
         </div>
         <p class="card-text" />
