--- a/lib/web/templates/admin/user/_form.html.eex
+++ b/lib/web/templates/admin/user/_form.html.eex
@@ -31,6 +31,12 @@
         </ul>
         <%= error_tag f, :flags %>
       </div>
+
+      <div class="form-group">
+        <%= label f, :notes %>
+        <%= textarea f, :notes, class: "form-control", rows: 5 %>
+        <%= error_tag f, :notes %>
+      </div>
     </div>
 
     <div class="box-footer">
