View announcements as an atom feed

--- a/lib/web/templates/layout/app.html.eex
+++ b/lib/web/templates/layout/app.html.eex
@@ -9,6 +9,7 @@
 
     <title><%= Config.game_name() %></title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/home.css") %>">
+    <link rel="alternate" type="application/rss+xml" title="<%= Config.game_name %> » Announcements" href="<%= public_announcement_url(@conn, :feed) %>">
   </head>
 
   <body>
