Auto link `{command}`s in the web client
- Options for turning off or sending another command
- Player input is auto delinked

--- a/assets/app/css/colors.scss
+++ b/assets/app/css/colors.scss
@@ -88,3 +88,12 @@ $green:     #859900;
   color: #d0d0d0;
   font-weight: bold;
 }
+
+/*
+ * Semantic colors
+ */
+
+.command {
+  text-decoration: underline;
+  cursor: pointer;
+}
